Added Build instructions as per assignment #6